--- a/ireport/Relatorios/iReport/jrxml/crrl007.jrxml
+++ b/ireport/Relatorios/iReport/jrxml/crrl007.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="crrl007" language="groovy" pageWidth="842" pageHeight="496" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="842" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" whenResourceMissingType="Empty" uuid="b0b8a82c-538e-4c5e-a2d2-48ac4a892d8a">
 	<property name="ireport.zoom" value="2.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="3"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="PR_NMRESCOP" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -167,11 +167,28 @@
 			</subreport>
 		</band>
 		<band height="16">
+			<subreport>
+				<reportElement uuid="adbc1bf5-0f67-4caa-b076-e2760e15b268" x="0" y="8" width="842" height="8"/>
+				<subreportParameter name="PR_CDAGENCI">
+					<subreportParameterExpression><![CDATA[$P{PR_CDAGENCI}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="PR_NMRESAGE">
+					<subreportParameterExpression><![CDATA[$P{PR_NMRESAGE}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="PR_NMMODULO"/>
+				<dataSourceExpression><![CDATA[$P{REPORT_DATA_SOURCE}.subDataSource("//diverso2")]]></dataSourceExpression>
+				<subreportExpression><![CDATA["crrl007_diversos2.jasper"]]></subreportExpression>
+			</subreport>
 			<break>
-				<reportElement uuid="f27f1c36-6bc4-430f-9c2b-7afd8f1b4177" x="0" y="4" width="100" height="1"/>
+				<reportElement uuid="f27f1c36-6bc4-430f-9c2b-7afd8f1b4177" x="0" y="1" width="100" height="1"/>
+			</break>
+		</band>
+		<band height="16">
+			<break>
+				<reportElement uuid="f27f1c36-6bc4-430f-9c2b-7afd8f1b4177" x="0" y="0" width="100" height="1"/>
 			</break>
 			<subreport>
-				<reportElement uuid="f53226c0-54ee-4d6b-915c-285b0f242180" x="0" y="8" width="595" height="8"/>
+				<reportElement uuid="f53226c0-54ee-4d6b-915c-285b0f242180" x="0" y="4" width="595" height="8"/>
 				<subreportParameter name="PR_NMRESCOP"/>
 				<subreportParameter name="PR_NMRELATO"/>
 				<subreportParameter name="PR_DTMVTOLT"/>
